--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,6 +2,7 @@
   "name": "cave-glass",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://<Username>.github.io/CaveGlass",
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
