--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1"
   },
